--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello I am in git.</title>
   </head>
   <body>
-    <h1>Hello Coursera ha ha hah <br> I am on git <br> I am feeling happy </h1>
+    <h1>Hello Coursera ha ha hah <br> I am on git <br> I am feeling happy <br> I am thirlled to contribute in open source. </h1>
   </body>
 </html>
